--- a/literature.bib
+++ b/literature.bib
@@ -360,3 +360,11 @@ doi = {10.1121/1.1984860}
 	year = {2020},
 	note = {Online; accessed: 2023-01-05}
 }
+
+@article{nedkov_impedance_2011,
+	title = {{Modeling of 3D Impedance Tube with a Complex
+	Termination Impedance using Finite Element Method}},
+	author = {Nedkov, Tsvetan},
+	journal = {Technical University Sofia},
+	year = {2015}
+}
