--- a/Chapter4_Finite_Element_Simulation.tex
+++ b/Chapter4_Finite_Element_Simulation.tex
@@ -92,6 +92,34 @@ A fictitious excitation with uniform normal surface particle velocity of $u_s = 
 
 The reference solution is computed by using a model with 2 m width and all errors are evaluated with respect to this reference.
 
+\begin{figure}
+	\centering
+	\begin{subfigure}[b]{0.48\textwidth}
+		\centering
+		\includegraphics{fig/chap4/simulation_domain/width_0pt2m.png}
+		\caption{Domain width \SI{0.2}{\meter}.}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.48\textwidth}
+		\centering
+		\includegraphics{fig/chap4/simulation_domain/width_0pt5m.png}
+		\caption{Domain width \SI{0.5}{\meter}.}
+	\end{subfigure}
+
+	\begin{subfigure}[b]{0.48\textwidth}
+		\centering
+		\includegraphics{fig/chap4/simulation_domain/width_1m.png}
+		\caption{Domain width \SI{1}{\meter}.}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[b]{0.48\textwidth}
+		\centering
+		\includegraphics{fig/chap4/simulation_domain/width_1pt5m.png}
+		\caption{Domain width \SI{1.5}{\meter}.}
+	\end{subfigure}
+	\caption{Relative error spectrum for different domain widths.}
+\end{figure}
+
 
 
 \subsection*{Computational Effort}
